# st_primary_desk

./: .gitignore  CRUD_DOCUMENTATION.md  README.md  alembic.ini  examples_crud.py  pyproject.toml
alembic/: env.py
src/: app.py  models.py
src/core/: database.py  p_desk.db
src/services/: student_service.py
src/views/: classes.py  dashboard.py  grades.py  settings.py  students.py  teachers.py
