[project]
name = "st-primary-desk"
version = "0.1.0"
description = ""
authors = [
    {name = "KINNOUME S. Borel",email = "kinnoumeb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (==1.51.0)",
    "sqlmodel (==0.0.27)",
    "alembic (==1.16.5)"
]

[tool.poetry]
packages = [{include = "st_primary_desk", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
