[project]
name = "st-primary-desk"
version = "0.1.0"
description = ""
authors = [{ name = "KINNOUME S. Borel", email = "kinnoumeb@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (==1.51.0)",
    "sqlmodel (==0.0.27)",
    "alembic (==1.16.5)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
]

[tool.poetry]
# Inclut le dossier `src` comme paquet racine du projet (depuis la racine du repo)
packages = [{ include = "src", from = "." }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
